# oslo-parking-finder

./: .gitignore  PROJECT_NOTES.md  README.md  pyproject.toml
.github/workflows/: build-and-deploy.yml
scripts/: make_icons.py  verify.py
src/parking_app/: __init__.py  models.py  storage.py
src/parking_app/adapters/: __init__.py  aimopark.py  easypark.py  onepark.py  oslo_kommune.py
src/parking_app/ingest/: fetch_oslo_kommune.py  fetch_register.py  fetch_register_details.py
src/parking_app/web/: __init__.py  build_map.py
tests/: test_build_map.py  test_enrich.py  test_models.py  test_normalize.py  test_oslo_kommune.py
web/static/: manifest.webmanifest
